# astarte-device-sdk-cpp

./: CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml  build_sample.sh  format.sh
.github/workflows/: unit.yaml
cmake/: AstarteMQTTTransport.cmake
end_to_end/: CMakeLists.txt
end_to_end/include/: action.hpp
end_to_end/include/testcases/: device_aggregate.hpp  device_property.hpp  device_reconnection.hpp
end_to_end/interfaces/: org.astarte-platform.cpp.end-to-end.DevicePropertyNoSensor.json
end_to_end/src/: main.cpp
include/astarte_device_sdk/: formatter.hpp  individual.hpp  property.hpp
include/astarte_device_sdk/mqtt/: exceptions.hpp  pairing.hpp
private/: grpc_formatter.hpp
samples/mqtt/native/: CMakeLists.txt  README.md  config.hpp  main.cpp
samples/mqtt/registration/: CMakeLists.txt  README.md  config.json  main.cpp
samples/qt/: main.cpp
samples/simple/: main.cpp
src/: data.cpp  individual.cpp  msg.cpp  property.cpp
src/mqtt/: pairing.cpp
unit/: CMakeLists.txt
